--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,37 @@
-
+{
+"name": "Ufa_city",
+"short_name": "UFA",
+"theme_color": "#4da92d",
+"background_color": "#4da92d",
+"display": "standalone",
+"orientation": "portrait",
+"start_url": ".",
+"prefer_related_applications": false,
+"icons":[
+{
+"src": "img/app-icon-96-96.png",
+"sizes": "96x96",
+"type": "image/png"
+},
+{
+"src": "img/app-icon-144-144.png",
+"sizes": "144x144",
+"type": "image/png"
+},
+{
+"src": "img/app-icon-192-192.png",
+"sizes": "192x192",
+"type": "image/png"
+},
+{
+"src": "img/app-icon-256-256.png",
+"sizes": "256x256",
+"type": "image/png"
+},
+{
+"src": "img/app-icon-512-512.png",
+"sizes": "512x512",
+"type": "image/png",
+"purpose": "maskable"
+}]
+}
